# Image-Sort

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  GitVersion.yml  HELP.md  IMPLEMENTATION_BLUEPRINT.md  Image sort.sln  Image-Sort.sln  LICENSE  License-Agreement.rtf  README.md  appveyor.yml  azure-pipelines.yml  cliff.toml  contributors.json  global.json  new_app_requirements.md  update-reg.json  version.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  deploy-demos-website.yml  dotnetcore.yml  master.yml  release.yml  website.yml
Image Sort Installer/: Image Sort Installer.vdproj
Image Sort Installer/Debug/: Image Sort Installer.msi
Image Sort Installer/Release/: Image Sort Installer.msi
Image sort/: App.xaml.cs  Image sort.UI.csproj  MainWindow.xaml  MainWindow.xaml.cs
Image sort.AdminModeHelper/: Image sort.AdminModeHelper.csproj  Program.cs  app.manifest
Image sort.AdminModeHelper/Properties/: AssemblyInfo.cs
Image sort.Communication/: Image sort.Communication.csproj  UpdaterConstants.cs
Image sort.Logic/: EventHandlerTypes.cs  FolderChangedEventArgs.cs  FolderSelector.cs  IImageManager.cs  Image sort.Logic.csproj  ImageFolderManager.cs  ImageSelectorQuery.cs
Image sort.Logic/Properties/: AssemblyInfo.cs
Image sort.UI/: App.config  App.xaml  App.xaml.cs  HELP.md  HelpWindow.xaml  HelpWindow.xaml.cs  Image sort.UI.csproj  MainWindow.xaml  MainWindow.xaml.cs  ScrollIntoViewForListBox.cs  UpdateDialog.xaml  UpdateDialog.xaml.cs  app.manifest  packages.config
Image sort.UI.Core/: Class1.cs  Image sort.UI.Core.csproj
Image sort.UI.Dialogs/: Image sort.UI.Dialogs.csproj  InputBox.cs  ProgressWindow.Designer.cs  ProgressWindow.cs  ProgressWindow.resx
Image sort.UI.Dialogs/Properties/: AssemblyInfo.cs
Image sort.UI.UnitTests/: Image sort.UI.UnitTests.csproj  UnitTest1.cs
Image sort.UI/Classes/: FileOperationApiWrapper.cs  InverseBooleanConverter.cs  ListBoxScroll.cs  NativeHelpers.cs  ShellFileLoader.cs  ThemeManagerHelper.cs
Image sort.UI/Components/: ThumbnailedListBoxItem.xaml.cs
Image sort.UI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
Image sort.UI/Windows/: FeedbackWindow.xaml  FeedbackWindow.xaml.cs  (+2 more)
Image sort.Update/: App.config  Image sort.Update.csproj  Program.cs  UpdateRegModel.cs  packages.config
Image sort.uwp/: Image sort.uwp.wapproj  Package.appxmanifest
ImageSort/: ImageSort.csproj
ImageSort.Localization/: ImageSort.Localization.csproj  Text.Designer.cs  Text.de-DE.resx  Text.resx
ImageSort.MSIX/: ImageSort.MSIX.wapproj  Package.appxmanifest
ImageSort.UnitTests/: ImageSort.UnitTests.csproj
ImageSort.WPF/: App.xaml  App.xaml.cs  ImageSort.WPF.csproj  MainWindow.xaml  MainWindow.xaml.cs  Settings.Designer.cs  Settings.settings
ImageSort.WindowsSetup/: ImageSort.WindowsSetup.wixproj  License.rtf  Product.wxs
ImageSort.WindowsUpdater/: GitHubUpdateFetcher.cs  ImageSort.WindowsUpdater.csproj  InstallerRunner.cs
ImageSort.WindowsUpdater.UnitTests/: GitHubUpdateFetcherTests.cs  ImageSort.WindowsUpdater.UnitTests.csproj
Legacy/: .gitignore  LEGACY.md  LICENSE
crates/iced-automation/: Cargo.toml
crates/iced-automation-macros/: Cargo.toml
crates/iced-automation-macros/src/: lib.rs
crates/iced-automation/src/: automation.rs  demo_setup.rs  headless.rs  lib.rs
crates/iced-automation/tests/: automation_tests.rs
crates/media-sort-backend/: Cargo.toml
crates/media-sort-backend/src/: lib.rs  media.rs  platform.rs
crates/media-sort-backend/src/filesystem/: mod.rs  scanner.rs  trash.rs  trash_staging.rs  watcher.rs
crates/media-sort-backend/src/media/: audio_decoder.rs  image_decoder.rs  mod.rs  mpv_context.rs  thumbnail.rs  vips_init.rs
crates/media-sort-backend/src/metadata/: audio_meta.rs  image_meta.rs  mod.rs  video_meta.rs
crates/media-sort-backend/src/platform/: mod.rs  windows_shell.rs
crates/media-sort-backend/tests/: audio_tests.rs  filesystem_tests.rs  metadata_tests.rs
crates/media-sort-core/: Cargo.toml  build.rs  ui_test_config.toml
crates/media-sort-core/src/: actions.rs  history.rs  l10n.rs  lib.rs  media_type.rs  models.rs  path_utils.rs  settings.rs
crates/media-sort-core/src/actions/: copy_action.rs  delete_action.rs  mod.rs  move_action.rs  rename_action.rs  reversible.rs
crates/media-sort-core/src/settings/: general.rs  keybindings.rs  metadata_panel.rs  mod.rs  pinned_folders.rs  store.rs  window_position.rs
crates/media-sort-core/tests/: core_tests.rs  detect_locale_tests.rs
crates/media-sort-gui/: Cargo.toml  build.rs  media-sort-gui.rc
crates/media-sort-gui/src/: app.rs  automation.rs  cache.rs  demo.rs  headless.rs  main.rs  message.rs  state.rs  theme.rs  update.rs  updater.rs  view.rs
crates/media-sort-gui/src/state/: audio.rs  cache.rs  create_folder_modal.rs  drag_drop.rs  folder.rs  media_errors.rs  media_grid.rs  metadata.rs  rename_modal.rs  settings_ui.rs  video.rs
crates/media-sort-gui/src/subscriptions/: keyboard.rs  mod.rs  prefetch.rs  thumbnail_tracker.rs  video_player.rs  video_trigger.rs
crates/media-sort-gui/src/update/: drag_drop.rs  folder.rs  keyboard.rs  media.rs  settings.rs  tasks.rs  tests.rs  video.rs
crates/media-sort-gui/src/view/: control_panel.rs  credits_dialog.rs  drag_drop.rs  folder_panel.rs  folder_tree.rs  history_bar.rs  hotkey_popup.rs  keybinding_editor.rs  main_layout.rs  media_grid.rs  media_preview.rs  metadata_panel.rs  mod.rs  overlay.rs  search_bar.rs  settings_dialog.rs  update_prompt.rs
crates/media-sort-gui/src/widgets/: create_folder_modal.rs  folder_icon.rs  media_controls.rs  mod.rs  rename_modal.rs  stack.rs  video_canvas.rs  video_player.rs  video_shader.rs
docs/: CNAME  _config.yml  help.md  index.md  privacy_policy.md  ror.xml  sitemap.html  sitemap.xml
v1.13.3/: Cha  Image Sort Installer.msi
website/: .prettierignore  .prettierrc.json  astro.config.mjs  eslint.config.js  package-lock.json  package.json  render-all-demos.sh
(+388 files in other folders)
