[workspace]
members = [
    "crates/media-sort-core",
    "crates/media-sort-backend",
    "crates/media-sort-gui",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Lolle2000la/Image-Sort"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"

fluent = "0.16"
fluent-bundle = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
once_cell = "1"
strum = { version = "0.26", features = ["derive"] }
dirs = "5"

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "ico", "webp"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
trash = "5"
walkdir = "2"
kamadak-exif = "0.6"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis", "wav", "all-codecs"] }
symphonia-core = "0.5"
rodio = { version = "0.20", default-features = false, features = ["flac", "vorbis", "wav", "mp3"] }
ash = "0.38"
raw-window-handle = "0.6"
id3 = "1"
metaflac = "0.2"
mp4ameta = "0.3"

iced = { version = "0.13", features = ["wgpu", "image", "lazy", "tokio"] }
iced_wgpu = "0.13"
wgpu = "24"
winit = "0.30"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
lru = "0.12"
smol_str = "0.2"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
