[package]
name = "media-sort-backend"
version.workspace = true
edition.workspace = true

[dependencies]
media-sort-core = { path = "../media-sort-core" }
image.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
trash.workspace = true
walkdir.workspace = true
kamadak-exif.workspace = true
symphonia.workspace = true
rodio.workspace = true
id3.workspace = true
metaflac.workspace = true
mp4ameta.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
strum.workspace = true
tokio.workspace = true
libmpv-sys = "3.1.0"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSFileManager", "NSURL", "NSString", "NSError"] }

