[package]
name = "media-sort-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
fluent.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true
once_cell.workspace = true
strum.workspace = true
