[package]
name = "media-sort-gui"
version.workspace = true
edition.workspace = true

[features]
default = []
velopack = ["dep:velopack", "dep:reqwest"]

[dependencies]
media-sort-core = { path = "../media-sort-core" }
media-sort-backend = { path = "../media-sort-backend" }
iced.workspace = true
iced_wgpu.workspace = true
tokio.workspace = true
lru.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
strum.workspace = true
image.workspace = true
rfd = { workspace = true }
lucide-icons = "1.21"
bytemuck = "1"
dirs = { workspace = true }
once_cell.workspace = true
serde = { workspace = true }

velopack = { version = "1.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
toml.workspace = true
