[package]
name = "media-sort-gui"
version.workspace = true
edition.workspace = true

[features]
default = []
velopack = ["dep:velopack", "dep:reqwest"]
demo = ["iced/canvas", "dep:pollster", "dep:iced_runtime", "dep:iced_test", "dep:serde_json"]

[dependencies]
media-sort-core = { path = "../media-sort-core" }
media-sort-backend = { path = "../media-sort-backend" }
iced.workspace = true
iced_wgpu.workspace = true
tokio.workspace = true
lru.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
strum.workspace = true
image.workspace = true
rfd = { workspace = true }
lucide-icons = "1.21"
bytemuck = "1"
dirs = { workspace = true }
once_cell.workspace = true
serde = { workspace = true }
ico.workspace = true

velopack = { version = "1.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
pollster = { version = "0.4", optional = true }
serde_json = { workspace = true, optional = true }
iced_runtime = { version = "0.14", optional = true }
iced_test = { version = "0.14", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.11"

[dev-dependencies]
toml.workspace = true
