[package]
name = "media-sort-gui"
version.workspace = true
edition.workspace = true

[features]
default = []
velopack = ["dep:velopack", "dep:reqwest", "dep:pgp", "dep:memmap2"]
demo = [
    "iced/canvas",
    "dep:pollster",
    "dep:iced_runtime",
    "dep:iced_test",
    "dep:serde_json",
    "dep:iced-automation",
    "iced-automation/headless",
]

[dependencies]
media-sort-core = { path = "../media-sort-core" }
media-sort-backend = { path = "../media-sort-backend" }
iced-automation = { path = "../iced-automation", optional = true }
iced-automation-macros = { path = "../iced-automation-macros" }
iced.workspace = true
iced_wgpu.workspace = true
tokio.workspace = true
lru.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
strum.workspace = true
image.workspace = true
rfd = { workspace = true }
lucide-icons = "1.21"
bytemuck = "1"
dirs = { workspace = true }
once_cell.workspace = true
serde = { workspace = true }
rayon.workspace = true
ico.workspace = true
clap = { version = "4.5", features = ["derive"] }
ash = "0.38"

velopack = { version = "1.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
pgp = { version = "0.20", optional = true }
memmap2 = { version = "0.9", optional = true }
pollster = { version = "0.4", optional = true }
serde_json = { workspace = true, optional = true }
iced_runtime = { version = "0.14", optional = true }
iced_test = { version = "0.14", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.11"

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
toml.workspace = true
